--- a/input.html
+++ b/input.html
@@ -6,8 +6,12 @@
 </head>
 
 <body>
+    <h1>TITLE - Inputs</h1>
     <div class="doble-gird">
         <h1>Kill me</h1>
         <h1>me first</h1>
     </div>
+
+
+    <script></script>
 </body>
