--- a/input.html
+++ b/input.html
@@ -7,7 +7,7 @@
 
 <body>
     <button class="back-button" onclick="goBack()">← Back</button>
-    <button style="right: 20px" style="position: absolute" style="top: 20px" onclick="flashbang()">Flashbang</button>
+    <button class="flashbang-button" onclick="flashbang()">Flashbang</button>
     <h1>TITLE - Inputs</h1>
     <div class="doble-gird">
         <h1>Kill me</h1>
