--- a/home.html
+++ b/home.html
@@ -4,8 +4,11 @@
         <link rel="stylesheet" href="format.css">
     </head>
 <body>
-    <h1>Home</h1>
-    <p>Welcome to the home page!</p>
+    <h1>Welcome to Talk Back</h1>
+    
+    <div>
+        <h2>Let's get the conversation started</h2>
+    </div>
 </body>
 
 
