recording page completed

--- a/input.html
+++ b/input.html
@@ -20,7 +20,7 @@
     
     
         <h1>This is where the prompt question goes...</h1>
-        <button onclick="flashbang()">Next page (currently flashbangs)</button>
+        <button onclick="recording()">Next</button>
     </text>
 
     <script>
@@ -29,6 +29,9 @@
         }
         function flashbang() {
             window.location.href = "flashbang.html";
+        }
+        function recording() {
+            window.location.href = "recording.html";
         }
     </script>
 </body>
