--- a/home.html
+++ b/home.html
@@ -3,12 +3,39 @@
     <head>
         <link rel="stylesheet" href="format.css">
     </head>
-<body>
+<body style = "display :auto; flex-direction: column; align-items: left; justify-content: top; height: auto; padding: 20px;">
     <h1>Welcome to Talk Back</h1>
-    
-    <div>
-        <h2>Let's get the conversation started</h2>
+    <div class="topnav">
+        <a href="home.html">Home</a>
+        <a href="input.html">Setup</a>
+        <a href="recording.html">Record</a>
     </div>
+
+    <br>
+    <br>
+    <h2>Let's get the conversation started</h2>
+
+    <br>
+    <br>
+    <section>
+        <h2>What is Talk Back?</h2>
+        <p>Words.</p>
+    </section>
+
+    <br>
+    <br>
+    <section>
+        <h2>Getting Started</h2>
+        <p>Words.</p>
+    </section>
+
+    <br>
+    <br>
+    <section>
+        <h2>Extra Help</h2>
+        <p>Words.</p>
+    </section>
+   
 </body>
 
 
