All the updates!

--- a/home.html
+++ b/home.html
@@ -3,12 +3,14 @@
     <head>
         <link rel="stylesheet" href="format.css">
     </head>
-<body style = "display :auto; flex-direction: column; align-items: left; justify-content: top; height: auto; padding: 20px;">
+<body style = "margin: 0; padding: 0; justify-content: left; 
+height: auto; width: auto; display: block; align-items: normal; text-align: left;">
     <h1>Welcome to Talk Back</h1>
     <div class="topnav">
         <a href="home.html">Home</a>
         <a href="input.html">Setup</a>
         <a href="recording.html">Record</a>
+        <a href="feedback.html">Feedback</a>
     </div>
 
     <br>
@@ -19,21 +21,33 @@
     <br>
     <section>
         <h2>What is Talk Back?</h2>
-        <p>Words.</p>
+        <p>Talk Back is designed to help improve your conversational skills through guided practice and feedback. Talk Back helps you
+            take time to consciously remove words from your speech you would rather avoid, and add words into your vocabulary that might
+            increase your specificity and descriptiveness. Talk Back is an extra hand in gaining clarity and composure in your communication.
+        </p>
     </section>
 
     <br>
     <br>
     <section>
         <h2>Getting Started</h2>
-        <p>Words.</p>
+        <p>First, you'll select the words you would like to avoid using when you talk, and well as any you'd like to start using.
+            After that, you will record a short video of yourself talking, either about a subject of your choice, or one given by a 
+            prompt. Once you're done, Talk Back will provide feedback about when and where you used certain words, and give you advice
+            on how to improve.
+        </p>
+        <p style="text-align: center;"><strong>Ready to Give it a Try?</strong>
+        </p>
+        <div class="container">
+            <button type="button" class="sb" style="justify-content: center;" onclick="window.location.href='input.html'">Continue &#8594</button>
+        </div>
     </section>
 
     <br>
     <br>
     <section>
         <h2>Extra Help</h2>
-        <p>Words.</p>
+        <p>If you're still confused on how to get started, you can watch our demonstration video <a href="flashbang.html">here</a>.</p>
     </section>
    
 </body>
