--- a/home.html
+++ b/home.html
@@ -36,10 +36,10 @@ height: auto; width: auto; display: block; align-items: normal; text-align: left
             prompt. Once you're done, Talk Back will provide feedback about when and where you used certain words, and give you advice
             on how to improve.
         </p>
-        <p style="text-align: center;"><strong>Ready to Give it a Try?</strong>
+        <p style="text-align: center; color: #fdc482"><strong>Ready to Give it a Try?</strong>
         </p>
         <div class="container">
-            <button type="button" class="sb" style="justify-content: center;" onclick="window.location.href='input.html'">Continue &#8594</button>
+            <button type="button" class="sb" style="justify-content: center; background-color:#fdc482" onclick="window.location.href='input.html'">Continue &#8594</button>
         </div>
     </section>
 
@@ -47,7 +47,7 @@ height: auto; width: auto; display: block; align-items: normal; text-align: left
     <br>
     <section>
         <h2>Extra Help</h2>
-        <p>If you're still confused on how to get started, you can watch our demonstration video <a href="flashbang.html">here</a>.</p>
+        <p>If you're still confused on how to get started, you can watch our demonstration video <a style = "color: #fdc482" href="flashbang.html">here</a>.</p>
     </section>
    
 </body>
