--- a/feedback.html
+++ b/feedback.html
@@ -4,42 +4,42 @@
       <link rel="stylesheet" href="format.css">
    </head>
    <body>
-      <div class="text">
+      <div class="feedback-container">
          <button class="back-button" onclick="goBack()">← Back</button>
          <h1>Feedback</h1>
-
-         <div class="words">
+         <div class="cards-wrapper">
             <section class="card">
                <div class="words-header">
+                  <span class="status-icon success">✔</span>
                   <h3>Target Words</h3>
                </div>
                <p>Words you should use (4 of 5 used)</p>
-               <div class="word-list">
-                  <h4>Words Used: </h4>
-                  <span class="used-word">Word 1</span>
-                  <span class="used-word">Word 2</span>
-                  <span class="used-word">Word 3</span>
-                  <span class="used-word">Word 4</span>
+               <div class="words-list">
+                  <h3>Words Used: </h3>
+                  <div class="group">
+                     <span class="used-word">Word 1</span>
+                     <span class="used-word">Word 2</span>
+                     <span class="used-word">Word 3</span>
+                     <span class="used-word">Word 4</span>
+                  </div>
 
                </div>
             </section>
-            <section class="card">
-               <div class="words-header">
+            <section class="card" style="display: flex; flex-direction: column; align-items: flex-start;">
+               <div class="words-header" style="margin-bottom: 10px; ">
                   <h3>Words to Avoid</h3>
+                  <p>Words you should avoid (4 of 4 avoided)</p>
                </div>
-               <p>Words you should avoid (4 of 4 avoided)</p>
                <div class="word-list">
-                  <h4>Words Avoided: </h4>
-                  <span class="used-word">Word 1</span>
-                  <span class="used-word">Word 2</span>
-                  <span class="used-word">Word 3</span>
-                  <span class="used-word">Word 4</span>
+                  <h3>Successfully Avoided: </h3>
+                  <span class="avoid-word">Word 1</span>
+                  <span class="avoid-word">Word 2</span>
+                  <span class="avoid-word">Word 3</span>
+                  <span class="avoid-word">Word 4</span>
 
                </div>
             </section>
 
-            
-            
          </div>
 
       </div>
