--- a/feedback.html
+++ b/feedback.html
@@ -8,12 +8,11 @@
          <button class="back-button" onclick="goBack()">← Back</button>
          <h1>Feedback</h1>
          <div class="cards-wrapper">
-            <section class="card">
-               <div class="words-header">
-                  <span class="status-icon success">✔</span>
+            <section class="card" style="display: flex; flex-direction: column;">
+               <div class="words-header" style="margin-bottom: 10px;">
                   <h3>Target Words</h3>
+                  <p>Words you should use (4 of 5 used)</p>
                </div>
-               <p>Words you should use (4 of 5 used)</p>
                <div class="words-list">
                   <h3>Words Used: </h3>
                   <div class="group">
@@ -25,8 +24,8 @@
 
                </div>
             </section>
-            <section class="card" style="display: flex; flex-direction: column; align-items: flex-start;">
-               <div class="words-header" style="margin-bottom: 10px; ">
+            <section class="card" style="display: flex; flex-direction: column;">
+               <div class="words-header" style="margin-bottom: 10px;">
                   <h3>Words to Avoid</h3>
                   <p>Words you should avoid (4 of 4 avoided)</p>
                </div>
