feedback for lab prototype

--- a/feedback.html
+++ b/feedback.html
@@ -15,7 +15,7 @@
                   <p>Words you should use (4 of 5 used)</p>
                </div>
                <div class="words-list">
-                  <h3>Words Used: </h3>
+                  <h3 style="margin-bottom: 25px;">Words Used: </h3>
                   <div class="group">
                      <span class="used-word">Word 1</span>
                      <span class="used-word">Word 2</span>
@@ -31,12 +31,11 @@
                   <p>Words you should avoid (4 of 4 avoided)</p>
                </div>
                <div class="word-list">
-                  <h3>Successfully Avoided: </h3>
+                  <h3 style="margin-bottom: 25px;">Successfully Avoided: </h3>
                   <span class="avoid-word">Word 1</span>
                   <span class="avoid-word">Word 2</span>
                   <span class="avoid-word">Word 3</span>
                   <span class="avoid-word">Word 4</span>
-
                </div>
             </section>
 
@@ -44,20 +43,14 @@
 
       </div>
        
-
-
-
-
-
-
-       <script>
-        function goBack() {
-            window.location.href = "recording.html";
-        }
-        function goHome() {
-            window.location.href = "home.html";
-        }
-        </script>
+      <script>
+      function goBack() {
+         window.location.href = "recording.html";
+      }
+      function goHome() {
+         window.location.href = "home.html";
+      }
+      </script>
    </body>
 </html>
 
